<resources>
    <!--<string name="app_name">真爱宣言</string>-->
    <string name="app_name">Demo</string>

    <!--登录\注册-->
    <string name="input_mobile_hint">请输入手机号码</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="mobile_hint">手机号</string>
    <string name="input_check_code_hint">验证码</string>
    <string name="input_recommend_code_hint">推荐码（非必填）</string>
    <string name="now_register">立即注册-></string>
    <string name="forget_password">忘记密码</string>
    <string name="update_mobile_number">更改手机号</string>
    <string name="login">登录</string>
    <string name="logout">退出账号</string>
    <string name="register">注册</string>
    <string name="next_step">下一步</string>
    <string name="get_check_code">获取验证码</string>
    <string name="register_condition">同意《真爱宣言注册协议》</string>
    <string name="register_condition_title">注册条款</string>
    <string name="password">密码</string>
    <string name="password_confirm">重新输入密码</string>
    <string name="old_password_hint">原密码</string>
    <string name="new_password_hint">新密码</string>
    <string name="confirm_new_pass_hint">重新输入新密码</string>
    <string name="submit">提交</string>
    <string name="pass_not_same">请输入相同的密码</string>
    <string name="send_again">重新获取</string>
    <!--Tabbar-->
    <string name="tabar_home">首页</string>
    <string name="tabar_video">拍摄</string>

    <string name="tabar_profile">我的</string>

    <string name="recommend">推荐</string>
    <string name="demo">示例</string>
    <string name="more">更多></string>
    <string name="recode">观看记录</string>
    <string name="my_video">我的视频</string>
    <string name="gift">神秘大礼包</string>
    <string name="change_info">修改资料</string>
    <string name="change_pass">修改密码</string>
    <string name="identity_verification">身份证审核</string>
    <string name="appeal">在线申诉</string>
    <string name="mail">邮箱</string>
    <string name="address">地址</string>
    <string name="ok">确定</string>
    <string name="all_demo">全部示例</string>
    <string name="all_recommend">全部推荐</string>
    <string name="delete">删除</string>
    <string name="appeal_text">申诉</string>
    <string name="text_photo_pick">从相册选择</string>
    <string name="text_photo_camera">拍照</string>
    <string name="text_photo_cancel">取消</string>
    <string name="upload_progress">上传进度:%s</string>
    <string name="uploading">Uploading at [[UPLOAD_RATE]] ([[PROGRESS]])</string>
    <string name="upload_success">上传成功:[[ELAPSED_TIME]]</string>
    <string name="upload_error">上传失败</string>
    <string name="video_pay">视频支付</string>
    <string name="text_pay_watch">付费观看</string>
    <string name="pay_type_tips">请选择支付方式</string>
    <string name="ali_pay">支付宝</string>
    <string name="wechat_pay">微信支付</string>
    <string name="certification">完善个人资料</string>
    <string name="name_hint">姓名</string>
    <string name="id_number_hint">身份证号码</string>

</resources>
