<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    tools:context="com.ldi.android.Activitys.LoginActivity">
    <!--导航条-->
    <include layout="@layout/navigation_bar_back" />
    <!--内容-->
    <EditText
        android:id="@+id/registerMobileET"
        style="@style/text_darkgray_14"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:inputType="phone"
        android:maxLength="11"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_height"
        android:hint="@string/mobile_hint"
        android:textColorHint="@color/gray_btn_bg_color"
        android:background="@drawable/input_edittext_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <EditText
            android:id="@+id/registerCheckCodeET"
            style="@style/text_darkgray_14"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:inputType="numberSigned"
            android:maxLength="4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/login_edittext_height"
            android:hint="@string/input_check_code_hint"
            android:textColorHint="@color/gray_btn_bg_color"
            android:background="@drawable/input_edittext_bg" />
        <Button
            android:id="@+id/registerSendCheckCodeBtn"
            style="@style/text_white_16"
            android:layout_width="120dp"
            android:layout_marginLeft="5dp"
            android:layout_height="40dp"
            android:text="@string/get_check_code"
            android:enabled="false"
            android:background="@drawable/green_btn_bg_selector"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/registerRecommendCodeET"
        style="@style/text_darkgray_14"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:inputType="numberSigned"
        android:maxLength="4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_height"
        android:hint="@string/input_recommend_code_hint"
        android:textColorHint="@color/gray_btn_bg_color"
        android:background="@drawable/input_edittext_bg" />

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/register_condition"/>
    <Button
        android:id="@+id/registerNextStepBtn"
        style="@style/text_white_16"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:text="@string/next_step"
        android:enabled="false"
        android:background="@drawable/red_btn_bg_selector"
        />

</LinearLayout>
