<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.zhenaixuanyan.app.videos.Activitys.ChangePasswordActivity">
    <!--Actionbar-->
    <include layout="@layout/navigation_bar_back"/>

    <EditText
        android:id="@+id/et_old_pass"
        style="@style/text_darkgray_14"
        android:layout_below="@+id/loginAccountET"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawablePadding="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="30dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_height"
        android:hint="@string/old_password_hint"
        android:textColorHint="@color/gray_btn_bg_color"
        android:background="@drawable/input_edittext_bg"/>
    <EditText
        android:id="@+id/et_new_pass"
        style="@style/text_darkgray_14"
        android:layout_below="@+id/loginAccountET"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawablePadding="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="30dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_height"
        android:hint="@string/new_password_hint"
        android:textColorHint="@color/gray_btn_bg_color"
        android:background="@drawable/input_edittext_bg"/>
    <EditText
        android:id="@+id/et_confirm_pass"
        style="@style/text_darkgray_14"
        android:layout_below="@+id/loginAccountET"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawablePadding="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="30dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edittext_height"
        android:hint="@string/confirm_new_pass_hint"
        android:textColorHint="@color/gray_btn_bg_color"
        android:background="@drawable/input_edittext_bg"/>
    <Button
        android:id="@+id/btn_submit_change"
        style="@style/text_white_16"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:text="@string/submit"
        android:enabled="false"
        android:background="@drawable/red_btn_bg_selector"
       />

</LinearLayout>
