<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    tools:context=".Activitys.MainActivity">
    <!--content-->
    <FrameLayout
        android:id="@+id/mainTabBarViewContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <!-- TabBar -->
    <RadioGroup
        android:id="@+id/mainTabBarRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:background="@drawable/tab_bar_bg"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/mainProductTabBarItem"
            style="@style/tabBarStyleSelected"
            android:drawableTop="@drawable/tabbar_home_selector"
            android:button="@null"
            android:drawablePadding="2dp"
            android:paddingTop="5dp"
            android:paddingBottom="2dp"
            android:background="@android:color/transparent"
            android:textColor="@drawable/tabbar_text_selector"
            android:text="@string/tabar_home"
            />
        <RadioButton
            android:id="@+id/mainCardTabBarItem"
            style="@style/tabBarStyleNormal"
            android:drawableTop="@drawable/tabbar_video_selector"
            android:button="@null"
            android:drawablePadding="2dp"
            android:paddingTop="5dp"
            android:paddingBottom="2dp"
            android:background="@android:color/transparent"
            android:textColor="@drawable/tabbar_text_selector"
            android:text="@string/tabar_video"
            />
        <RadioButton
            android:id="@+id/mainProfileTabBarItem"
            style="@style/tabBarStyleNormal"
            android:drawableTop="@drawable/tabbar_profile_selector"
            android:button="@null"
            android:drawablePadding="2dp"
            android:paddingTop="5dp"
            android:paddingBottom="2dp"
            android:background="@android:color/transparent"
            android:textColor="@drawable/tabbar_text_selector"
            android:text="@string/tabar_profile"
            />
    </RadioGroup>

</LinearLayout>
