<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackground"
    tools:context="com.ldi.android.Activitys.ChangeProfileActivity">
    <!--Actionbar-->
    <include android:id="@+id/actionbar" layout="@layout/navigation_bar_back"/>

    <RelativeLayout
        android:layout_below="@+id/actionbar"
        android:id="@+id/rl_profile_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        >

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/guide2_logo"/>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改头像"
            android:textColor="@color/black"
            android:layout_marginRight="@dimen/view_margin_padding"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/title_second_text_size"
            />
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/fl_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_below="@+id/rl_profile_info"
        android:layout_marginTop="@dimen/view_margin_padding">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:layout_marginLeft="@dimen/view_margin_padding"
            android:layout_gravity="left|center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="125465@qq.com"
            android:layout_marginRight="@dimen/view_margin_padding"
            android:layout_gravity="right|center_vertical"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_below="@+id/fl_mail"
        android:layout_marginTop="1dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginLeft="@dimen/view_margin_padding"
            android:layout_gravity="left|center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="上海市"
            android:layout_marginRight="@dimen/view_margin_padding"
            android:layout_gravity="right|center_vertical"/>
    </FrameLayout>
    <Button
        android:id="@+id/btn_ok"
        style="@style/text_white_16"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:text="@string/ok"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/red_btn_bg_selector"
       />
</RelativeLayout>
